--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/vendors/iconfonts/flag-icon-css/css/flag-icon.min.css">
     <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.addons.css">
+    <link rel="stylesheet" href="app/css/jquery.datetimepicker.min.css">
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="assets/css/shared/style.css">
