--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -19,6 +19,9 @@
           </div>
           <span class="profile-text font-weight-medium d-none d-md-block">English</span>
         </a>
+
+        <input id="logedin-user-id" value="<%= user.userId %>" type="text" hidden>
+
         <div class="dropdown-menu dropdown-menu-left navbar-dropdown py-2" aria-labelledby="LanguageDropdown">
           <a class="dropdown-item">
             <div class="flag-icon-holder">
