--- a/views/partials/_sidebar.ejs
+++ b/views/partials/_sidebar.ejs
@@ -68,10 +68,10 @@
       <div class="collapse" id="auth">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
-            <a class="nav-link" href="#"> Default page1 </a>
+            <a class="nav-link" href="/proxy"> Proxy manage </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> Default page2 </a>
+            <a class="nav-link" href="#"> User manage </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"> Default page3 </a>
