--- a/views/partials/_scripts.ejs
+++ b/views/partials/_scripts.ejs
@@ -10,3 +10,4 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
 <script src="app/js/mk-notifications.js"></script>
+<script src="app/js/jquery.datetimepicker.full.min.js"></script>
