--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -9,7 +9,7 @@
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-center">
     <ul class="navbar-nav">
-      <li class="nav-item font-weight-semibold d-none d-lg-block">Help : +17709194472</li>
+      <li class="nav-item font-weight-semibold d-none d-lg-block">Help: igagentprime@gmail.com</li>
       <li class="nav-item dropdown language-dropdown">
         <a class="nav-link dropdown-toggle px-2 d-flex align-items-center" id="LanguageDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
           <div class="d-inline-flex mr-0 mr-md-3">
